--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,15 @@ importlib-metadata==8.7.0
 # - CUDA-capable GPU
 # - Appropriate NVIDIA drivers installed
 # - ffmpeg installed on the system
+flask==3.1.2
+flask-socketio==5.5.1
+python-socketio==5.13.0
+python-engineio==4.12.2
+bidict==0.23.1
+simple-websocket==1.1.0
+wsproto==1.2.0
+h11==0.16.0
+blinker==1.9.0
+click==8.1.8
+itsdangerous==2.2.0
+werkzeug==3.1.3
